# aphros

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitlab-ci0.yml  BingSiteAuth.xml  BlockProcessorMPI.h  BoundaryConditions.h  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.html  README.md  README.py  Types.h  curv.html  curv.py  grid.html  index.html  main.cpp  revision  run
deploy/: CMakeLists.txt  Makefile  README.md  all  amgx_no_comm_report.patch  install_setenv  scripts_gen  util
deploy/cmake/: Makefile
deploy/common/: README.md
deploy/eigen/: _run  install
deploy/fpzip/: _run  build  conf  conf.daint  install
deploy/hypre/: _run  conf  conf.daint  conf.euler  install
deploy/lib/: .gitignore  CMakeLists.txt  _run
deploy/scripts/: aconf  applycopyright  argmax  argmaxall  base  base.makefile  cawk  deriv  diff  diffnum  downsample  findsource  genxmf  getcol  gettraj  gettrajcol  gettrajm  gettrajsh  getval  gitsnap  hausdorff  hist  histbin  intcol  job0  kill  line  makearg  makesim  merge_hdf_xmf  merge_hdf_xmf_all  merge_raw_xmf  merge_raw_xmf_all  mpirun  order  part  part0  plain2vtk  pngmp4  py2conf  (+17 more)
deploy/scripts_gen/: aconf  base  conf_gen  confdeb  create_a_conf  create_base_conf  kill_gen  mpirun_gen  setenv  submit  submit_gen
deploy/setenv/: _run  gen.setenv  setenv0  setenv1  setenv2.daint  setenv2.euler  setenv2.falcon
deploy/sim/: _run
deploy/tool/: Makefile  _run  applycopyright  argmax  argmaxall  cawk  conf  copyright  deriv  diff  diffnum  downsample  downsampleall  findsource  format  genxmf  genxmfall  gettraj  gettrajcol  gettrajm  gettrajsh  hist  histbin  kedr  line  makearg  order  part  plain2vtk  scale  spawn  statcopy  task  trajaxes  vtkcolorall  writearg
deploy/wrap/: _run  conf  conf.daint  confdeb  confdeb.daint  gen.aconf  gen.base  getcol  job  job.daint  job.euler  job.falcon  job0  kill  kill.euler  mpirun  mpirun.daint  run  run0  submit  submit.daint  submit.euler  submit0  sysinfo  sysinfo.daint  writearg
examples/107_wasm/: .gitignore  CMakeLists.txt  Makefile  Makefile_legacy  README.md  aphros.cpp  aphros.html  aphros.md  aphros_defs.js  aphros_doc.css  aphros_doc.md  common.h  diffusion.cpp  diffusion.html  electrochem.cpp  electrochem.html  electrochem_defs.js  hydro.cpp  hydro.html  hydro_defs.js  parser.cpp  parser.html
poc/07_overlap/: .gitignore  CMakeLists.txt
poc/12_hdf/: CMakeLists.txt  h5.dep.cmake  h5.h  main.c
poc/13_march/: .gitignore  CMakeLists.txt  main.c  march.h  table.h
poc/14_bawave/: CMakeLists.txt  main.c  wave.c
poc/19_daint_hdf_fail/: CMakeLists.txt  conf  main.c
src/: .gitignore  CMakeLists.txt  Makefile  Makefile_legacy  Makefile_nmake  NMakefile  aphrosConfig.cmake  aphros_c.h  aphrosjsConfig.cmake  build.daint  c.cpp  client.cmake  conf  conf.daint  confdeb  explorer.cpp  explorer_gen  gitrev  header  header.cmake  hydro.cmake  hydro.h  hydroConfig.cmake  lib.cmake  main.c  main.cpp  setenv.daint  setenv.euler  vars.cmake.in
src/Cubism/: .gitignore  BlockInfo.h  BlockLab.h  BlockLabMPI.h  BlockLabMPI_new.h  BlockLab_new.h  DependencyCubeMPI.h  Grid.h  GridMPI.h  GridMPI_new.h  Grid_new.h  HDF5Dumper.h  HDF5Dumper_MPI.h  HDF5SliceDumperMPI.h  Histogram.h  Indexers.h  LosslessCompression.h  Matrix3D.h  MeshMap.h  PUPkernelsMPI.h  Profiler.h  QPXEMU.h  SerializerIO.h  StencilInfo.h  SynchronizerMPI.h  SynchronizerMPI_new.h  ZBinDumper.h  ZBinDumper_MPI.h
src/CubismDistr/: Cubism.cpp  Cubism.h  Distr.h  DistrSolver.cpp  DistrSolver.h  Hydro.h  ICubism.h  ILocal.h  Interp.cpp  Interp.h  Kernel.h  KernelMesh.h  KernelMeshPar.h  KernelPar.h  Local.cpp  Local.h  Vars.cpp  Vars.h  cubism.cpp  cubism.h  distr.h  distrsolver.cpp  distrsolver.h  hydro.h  icubism.h  ilocal.h  interp.cpp  kernel.h  kernelmesh.h  kernelmeshpar.h  kernelpar.h  local.cpp  local.h  main.cpp  vars.cpp
src/CubismNoCopy/: BlockInfo.h  BlockLab.h  BlockLabMPI.h  DependencyCubeMPI.h  Grid.h  GridMPI.h  HDF5Dumper_MPI.h  Matrix3D.h  PUPkernelsMPI.h  StencilInfo.h  SynchronizerMPI.h
src/aphros_c/: git.cpp  main.cpp  parser.cpp
src/color/: CMakeLists.txt  color.c  color.h
src/debug/: cond.h  isnan.h  linear.h
src/distr/: CMakeLists.txt  comm_manager.cpp  comm_manager.h  comm_manager.ipp  comm_manager_seq.ipp  commmap.h  cubism.cpp  cubism.h  cubism.ipp  cubismnc.cpp  cubismnc.h  cubismnc.ipp  distr.cpp  distr.h  distr.ipp  distr_particles.cpp  distr_particles.h  distr_particles.ipp  distrbasic.cpp  distrbasic.h  distrsolver.cpp  distrsolver.h  icubism.h  icubismnc.h  ilocal.h  local.cpp  local.h  local.ipp  main.cpp  native.cpp  native.h  native.ipp  native_seq.ipp  reduce.h  report.cpp  report.h
src/dump/: CMakeLists.txt  dump.cpp  dump.h  dump.ipp  dumper.cpp  dumper.h  hdf.cpp  hdf.h  hdf.ipp  hdf_nompi.ipp  output.h  output.hpp  output_paraview.h  output_paraview.hpp  raw.cpp  raw.h  raw.ipp  raw_nompi.ipp  vtk.cpp  vtk.h  vtk.ipp  xmf.cpp  xmf.h  xmf.ipp
src/func/: CMakeLists.txt  init.cpp  init.h  init.ipp  init_bc.h  init_cl.h  init_contang.cpp  init_contang.h  init_o.h  init_sig.h  init_u.h  init_vel.cpp  init_vel.h  primlist.cpp  primlist.h  primlist.ipp
src/geom/: CMakeLists.txt  block.h  blockface.h  blockfaced.h  dir.h  field.h  filter.h  idx.h  loop.h  map.h  math.h  mesh.cpp  mesh.h  mesh.hpp  mesh.ipp  mesh3d.h  notation.h  range.h  rangein.h  rangemulti.h  transform.h  unique.h  vect.h
src/hydro/: advection.hpp  advection_tvd.hpp  advection_vof.hpp  block.h  blockface.h  conv_diff.hpp  dir.h  dump.h  dumper.cpp  dumper.h  field.h  fluid.hpp  hypre.cpp  hypre.h  idx.h  imesh.h  init_u.h  init_vel.h  linear.hpp  map.h  mesh.hpp  mesh3d.hpp  metrics.hpp  output.hpp  output_paraview.hpp  particle_system.hpp  range.h  rangein.h  solver.hpp  suspender.cpp  suspender.h  vect.hpp
src/inside/: CMakeLists.txt  bbox.c  bbox.h  bbox.inc  err.c  err.h  err.inc  inside.h  main.c  memory.c  memory.h  off.c  off.inc  ply.c  ply.inc  predicate.c  predicate.h  predicate.inc  predicate_c.inc  stl.c  stl.inc
src/kernel/: CMakeLists.txt  hydro.cpp  hydro.h  hydro.ipp  hydro_post.cpp  (+7 more)
(+5337 files in other folders)
